Updated content and basic structure of Centurion features

--- a/grid.html
+++ b/grid.html
@@ -11,9 +11,9 @@
 <link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
 
 <!-- CENTURION -->
-<link rel='stylesheet' href='styles/reset.css'>
-<link rel='stylesheet' href='styles/centurion.css'>
-<link rel='stylesheet' href='styles/elusive-webfont.css'>
+<link rel='stylesheet' href='css/reset.css'>
+<link rel='stylesheet' href='css/centurion.css'>
+<link rel='stylesheet' href='css/elusive-webfont.css'>
 <!-- end of CENTURION -->
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
 <![endif]-->
 <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
 
-<link rel='stylesheet' href='styles/demo.css'>
+<link rel='stylesheet' href='css/demo.css'>
 
 	<script type="text/javascript">
     $(document).ready(function(){
@@ -54,61 +54,6 @@
       
     });  
   </script>
-
-	<style type="text/css">
-		article { margin: 0; }
-		code {
-			background:#ccc;
-			border:1px solid #888;
-			display:block;
-			padding: 10px 20px;
-		}
-
-		section .grid-1 p,
-		section .grid-2 p,
-		section .grid-3 p,
-		section .grid-4 p,
-		section .grid-5 p,
-		section .grid-6 p,
-		section .grid-7 p,
-		section .grid-8 p,
-		section .grid-9 p,
-		section .grid-10 p,
-		section .grid-11 p,
-		section .grid-12 p {
-			background:#ededed;
-			border:1px solid #888;
-			color: #333;
-			font-size: 12px;
-			padding: 10px;
-			margin-bottom: 10px;
-		}
-
-		section p.noStyle {
-			border: none;
-			background: none;
-			color: #333;
-			font-size: 16px;
-			padding: 0;
-		}
-		footer p {
-			border: none !important;
-			background: none !important;
-			color: #FFF !important;
-			padding: 0 !important;
-		}
-		
-		/* GRID NESTING */
-  		#grid [class*="grid-"] [class*="grid-"] p {
-  			background: lightblue;
-  		}
-  		#grid [class*="grid-"] [class*="pull-"] p {
-  			background: lightpink;
-  		}
-  		#grid [class*="grid-"] [class*="push-"] p {
-  			background: lightgreen;
-  		}
-	</style>
 
 </head>
 <body>
@@ -140,7 +85,6 @@
 	<section id="grid">
     <div class="container">
         <div class="grid-100">
-          <h1>The Grid</h1>
           <p class="noStyle">This is a page to show how the grid layout functions.</p>
         </div>
         <div class="clear"></div>
