--- a/tables.html
+++ b/tables.html
@@ -11,9 +11,9 @@
 <link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
 
 <!-- CENTURION -->
-<link rel='stylesheet' href='styles/reset.css'>
-<link rel='stylesheet' href='styles/centurion.css'>
-<link rel='stylesheet' href='styles/elusive-webfont.css'>
+<link rel='stylesheet' href='css/reset.css'>
+<link rel='stylesheet' href='css/centurion.css'>
+<link rel='stylesheet' href='css/elusive-webfont.css'>
 <!-- end of CENTURION -->
 
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
 <![endif]-->
 <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
 
-<link rel='stylesheet' href='styles/demo.css'>
+<link rel='stylesheet' href='css/demo.css'>
 
 	<style type="text/css">
 		article { margin: 0; }
