--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 				<div class="slider">
 
 					<h1>Centurion</h1>
-					<p>Built using SASS and CSS3 media queries, Centurion is a responsive web framework that scales with your device. No longer do you need to worry about the screen size of an iPhone or an Android tablet since Centurion does the work for you.</p>
-					<p>Want to test Centurion out simply fork or download the repository on Github to get started and see the power a responsive framework can have on your next web project.</p>
+					<p>Built using Sass and CSS3 media queries, Centurion is a responsive web framework that scales with your device. No longer do you need to worry about the screen size of an iPhone or an Android tablet since Centurion does the work for you.</p>
+					<!-- <p>Want to test Centurion out simply fork or download the repository on Github to get started and see the power a responsive framework can have on your next web project.</p> -->
 
 					<p id="download">
 						<a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust">Download Centurion</a>
