--- a/buttons.html
+++ b/buttons.html
@@ -3,55 +3,40 @@
 <head>
 	<title>Buttons | Centurion - A CSS Web Framework</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
-<link rel="shortcut icon" href="graphics/favicon.jpg" />
-<link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
-
-<!-- CENTURION -->
-<link rel='stylesheet' href='css/reset.css'>
-<link rel='stylesheet' href='css/centurion.css'>
-<link rel='stylesheet' href='css/elusive-webfont.css'>
-<!-- end of CENTURION -->
-
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<!-- @scripts centurion -->
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<!--[if gte IE 9]>
-  <style type="text/css">
-    .gradient {
-       filter: none;
-    }
-  </style>
-<![endif]-->
-<!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
-
-<link rel='stylesheet' href='css/demo.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   
-  <style type="text/css">
-  		article { margin: 0; }
-	</style>
-	
+  <link rel="shortcut icon" href="graphics/favicon.jpg" />
+  <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-touch-icon-114x114.png" />
+  
+  <!-- CENTURION -->
+  <link rel='stylesheet' href='css/reset.css'>
+  <link rel='stylesheet' href='css/centurion.css'>
+  <link rel='stylesheet' href='css/elusive-webfont.css'>
+  <!-- end of CENTURION -->
+  
+  
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,700,600,800,300' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' href='css/demo.css'>
+  
+  <!--[if (lt IE 9) & (!IEMobile)]>
+  <link rel="stylesheet" href="css/centurion-ie.css" />
+  <![endif]-->
+
 </head>
 <body>
-	<a href="https://github.com/jhough10/centurion" class="github"><!--github fork--></a>
+
 
 <header>
 	<section class="container">
 		<article class="grid-100">
 			<nav>
 				<ul>
-					<li><a href="index.html" id="logo">Centurion</a></li>
-					<li><a class="current" href="features.html">Features</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="get-started.html">Get Started</a></li>
 					<li><a href="grid.html">The Grid</a></li>
-					<li><a href="documentation.html">Docs</a></li>
+					<!-- <li><a href="documentation.html">Docs</a></li> -->
 				</ul>
 			</nav>
 		</article>
@@ -138,17 +123,29 @@
 
 
 	<footer>
-	<section class="container">
-		<article class="grid-33">
-			<p>Site content &copy; 2012 Room 316 Studios.</p>
-		</article>
-		<article class="grid-33 push-33">
-			<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
-		</article>
-	</section>
-</footer>
+  	<section class="container">
+  		<article class="grid-33">
+  			<p>Created by <a href="http://www.justinhough.com">Justin Hough</a>.</p>
+  		</article>
+  		<article class="grid-33 push-33">
+  			<p>Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
+  		</article>
+  	</section>
+  </footer>
 
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="js/centurion.js"></script>
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!--[if gte IE 9]>
+    <style type="text/css">
+      .gradient {
+         filter: none;
+      }
+    </style>
+  <![endif]-->
+  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
       
 </body>
 </html>
