Changed "centerGrid" to "center-grid"

--- a/example/grid.html
+++ b/example/grid.html
@@ -311,43 +311,43 @@
 <div class="clear"></div>
 
 <section class="calculate">
-  <div class="grid-10 centerGrid">
+  <div class="grid-10 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-20 centerGrid">
+  <div class="grid-20 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-30 centerGrid">
+  <div class="grid-30 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-40 centerGrid">
+  <div class="grid-40 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-50 centerGrid">
+  <div class="grid-50 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-60 centerGrid">
+  <div class="grid-60 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-70 centerGrid">
+  <div class="grid-70 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-80 centerGrid">
+  <div class="grid-80 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-90 centerGrid">
+  <div class="grid-90 center-grid">
       <!-- grid -->
   </div>
   
-  <div class="grid-100 centerGrid">
+  <div class="grid-100 center-grid">
       <!-- grid -->
   </div>
   
