Fixed issue with tour area

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
 		<div class="container">
 			<article class="grid-50 center-grid">
 				<h1>Centurion</h1>
-				<h2>A streamlined and powerful web <br>
-				framework for responsive web sites.</h2>
+				<h2>A streamlined and powerful web framework for responsive web sites.</h2>
 
-				<p id="download"><a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust">Download</a></p>
+				<p id="download">
+				  <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust hide-mobile">Download</a>
+				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-desktop">Fork the Repo</a>
+				  </p>
 			</article>
 
 		</div>
