Removed html5shim and put support for modernizr for older IE browser support. (Placed before body so that HTML5 elements can be rendered before the body is loaded)

--- a/get-started.html
+++ b/get-started.html
@@ -22,6 +22,7 @@
   
   <!--[if (lt IE 9) & (!IEMobile)]>
   <link rel="stylesheet" href="css/centurion-ie.css" />
+  <script src="js/modernizr-2.6.2-custom-min.js"></script>
   <![endif]-->
 
 </head>
@@ -399,9 +400,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <!--[if gte IE 9]>
     <style type="text/css">
       .gradient {
