--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="js/centurion.js"></script>
   <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="js/modernizr-2.6.2-custom-min.js"></script>
   <![endif]-->
   <!--[if gte IE 9]>
     <style type="text/css">
@@ -204,7 +204,9 @@
       }
     </style>
   <![endif]-->
-  <!--[if lte IE 7]><script src="js/lte-ie7.js"></script><![endif]-->
+  <!--[if lte IE 7]>
+  <script src="js/lte-ie7.js"></script>
+  <![endif]-->
 	
 </body>
 </html>
