Added modernizr support for HTML5 tags and a few other things to hedge up IE7 and IE8. Removed the html5shim.

--- a/semantic.html
+++ b/semantic.html
@@ -32,10 +32,11 @@
   <![endif]-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 
+  <!--[if (lt IE 9) & (!IEMobile)]>
+  <link rel="stylesheet" href="../css/centurion-ie.css" />
+  <script src="../js/modernizr-2.6.2-custom-min.js"></script>
+  <![endif]-->
 
 </head>
 <body>
@@ -86,6 +87,5 @@
   </footer>
   <!-- End of Footer -->
 
-  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
