--- a/example/grid.html
+++ b/example/grid.html
@@ -30,14 +30,11 @@
   <![endif]-->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript" src="../js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
+  <!--[if (lt IE 9) & (!IEMobile)]>
+  <link rel="stylesheet" href="../css/centurion-ie.css" />
+  <script src="../js/modernizr-2.6.2-custom-min.js"></script>
   <![endif]-->
-  
-  <style type="text/css">
-  		
-  
-  </style>
   
   <script type="text/javascript">
     $(document).ready(function(){
@@ -536,6 +533,5 @@
   </footer>
   <!-- End of Footer -->
 
-  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
