--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
   <![endif]-->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  
+  <!--[if (lt IE 9) & (!IEMobile)]>
+  <link rel="stylesheet" href="../css/centurion-ie.css" />
+  <script src="../js/modernizr-2.6.2-custom-min.js"></script>
   <![endif]-->
 
 </head>
@@ -163,6 +165,5 @@
   </footer>
   <!-- End of Footer -->
 
-  <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
