--- a/index.html
+++ b/index.html
@@ -4,23 +4,22 @@
   <meta charset="utf-8">
   <title>Centurion Framework</title>
   <meta name="description" content="Centurion Framework">
-  <meta name="author" content="">
   
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   
   <link rel="shortcut icon" href="images/favicon.jpg" />
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
   
-  <link rel="stylesheet" href="css/reset.css" />
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="../css/reset.css" />
   <!-- Centurion Framework -->
-  <link rel="stylesheet" href="css/centurion.css" />
+  <link rel="stylesheet" href="../css/centurion.css" />
+  <link rel="stylesheet" href="../css/elusive-webfont.css" />
   <!-- End of Framework -->
-  <link rel="stylesheet" href="css/elusive-webfont.css" />
-  <link rel="stylesheet" href="css/custom.css" />
-  
+  <link rel="stylesheet" href="../css/custom.css" />
   <!--[if gte IE 9]>
     <style type="text/css">
       .gradient {
@@ -28,12 +27,6 @@
       }
     </style>
   <![endif]-->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-  <script type="text/javascript" src="js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
   
 </head>
 <body>
@@ -163,5 +156,13 @@
     </div>
   </footer>
   <!-- End of Footer -->
+  
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/centurion.js"></script>
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  
 </body>
 </html>
