Added modernizr to head for IE fixes. Removed html5shiv. Fixed missing script for Elusive fonts in IE on two pages.

--- a/example/about.html
+++ b/example/about.html
@@ -27,7 +27,10 @@
       }
     </style>
   <![endif]-->
-
+  <!--[if lt IE 9]>
+    <script src="../js/modernizr-2.6.2-custom-min.js"></script>
+  <![endif]-->
+  
 </head>
 <body>
  <!-- Navigation -->
@@ -391,11 +394,8 @@
   </footer>
   <!-- End of Footer -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="../js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
   
 </body>
