--- a/example/documentation.html
+++ b/example/documentation.html
@@ -27,7 +27,9 @@
       }
     </style>
   <![endif]-->
-
+  <!--[if lt IE 9]>
+    <script src="../js/modernizr-2.6.2-custom-min.js"></script>
+  <![endif]-->
 
   <style type="text/css">
     code {
@@ -35,7 +37,6 @@
       padding: 0 10px;
     }
   </style>
-
 
 </head>
 <body>
@@ -437,9 +438,6 @@ Each grid element has a margin of 10px on either side to give a nice 20px space 
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="../js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
   <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
   
 </body>
