--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       }
     </style>
   <![endif]-->
+  <!--[if lt IE 9]>
+    <script src="js/modernizr-2.6.2-custom-min.js"></script>
+  <![endif]-->
   
 </head>
 <body>
@@ -160,9 +163,7 @@
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/centurion.js"></script>
-  <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
+  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
   
 </body>
 </html>
