--- a/index.html
+++ b/index.html
@@ -57,89 +57,86 @@
   <section>
     <div class="container">
         <div class="grid-100">
-  <div id="mainBanner">
-    <h1>The Framework</h1>
+          <div id="mainBanner">
+            <h1>The Framework</h1>
+          </div>
+        </div>
+  
+  
+  <div class="grid-60">
+  
+    <img src="http://placehold.it/200x310" alt="" class="lfloat frame visible hide-mobile">
+    <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
+    <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
+    <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
+  
+  
   </div>
-</div>
+  <div class="grid-40">
+  
+    <h2>Features</h2>
+    <ul>
+      <li>Responsive grid system
+        <ul>
+            <li>Desktop</li>
+            <li>Tablet</li>
+            <li>Mobile Landscape</li>
+            <li>Mobile Portrait</li>
+        </ul>
+      </li>
+      <li>Buttons</li>
+    </ul>
+    <br />
+  
+    <!--
+  <h2>Pre-Built Themes</h2>
+    <p><a href="">Drupal Theme</a></p>
+    <p>Wordpress Theme - coming soon.</p>
+  -->
+  
+  </div>
+  <!-- end of grid 8x3 -->
 
 
-<div class="grid-60">
-
-  <img src="http://placehold.it/200x310" alt="" class="lfloat frame visible">
-  <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
-  <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
-  <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
-
-
-</div>
-<div class="grid-40">
-
-  <h2>Features</h2>
-  <ul>
-    <li>Responsive grid system
-      <ul>
-          <li>Desktop</li>
-          <li>Tablet</li>
-          <li>Mobile Landscape</li>
-          <li>Mobile Portrait</li>
-      </ul>
-    </li>
-    <li>Buttons</li>
-  </ul>
-  <br />
-
-  <!--
-<h2>Pre-Built Themes</h2>
-  <p><a href="">Drupal Theme</a></p>
-  <p>Wordpress Theme - coming soon.</p>
--->
-
-</div>
-<!-- end of grid 8x3 -->
-
-<div class="clear"></div>
-
-<div class="grid-50">
-  <h2>Code</h2>
-  <p><code>
-      &lt;div class="container"&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 alpha"&gt;<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-      &nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33"&gt;<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-      &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-      &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 omega"&gt;<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-      &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-      &lt;/div&gt;
-
-      </code></p>
-</div>
-<div class="grid-50">
-  <h2>Out of the Box</h2>
-  <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
-</div>
-<!-- end of grid 6x6 -->
-<div class="clear"></div>
-<div class="grid-25">
-  <h3>Grid 3</h3>
-  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-</div>
-<div class="grid-25">
-  <h3>Grid 3</h3>
-  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-</div>
-<div class="grid-25">
-  <h3>Grid 3</h3>
-  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-</div>
-<div class="grid-25">
-  <h3>Grid 3</h3>
-  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-</div>
-<!-- end of grid 3x3x3x3 -->
-<div class="clear"></div>
+    <div class="grid-50">
+      <h2>Code</h2>
+      <pre><code>
+          &lt;div class="container"&gt;<br>
+          &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 alpha"&gt;<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+          &nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
+          &nbsp;&nbsp;&nbsp;&lt;div class="grid-33"&gt;<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+          &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
+          &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 omega"&gt;<br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+          &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
+          &lt;/div&gt;
+    
+          </code></pre>
+    </div>
+    <div class="grid-50">
+      <h2>Out of the Box</h2>
+      <p>Ideally, Centurion wasn't meant to be the end of a theme, but rather it was meant to be beginning of a better one. Most of the features that exist within Centurion I have personally had to rebuild on most of the themes that I have worked on each time a new theme was created. I started working on Centurion to be the bridge between having to build mobile features into a theme, or even to have to build basic features, such as buttons, and text formats. Out of the box, Centurion is meant to speed up the development process.</p>
+    </div>
+    <!-- end of grid 6x6 -->
+    <div class="clear"></div>
+    <div class="grid-25 mobile-50">
+      <h3>Grid 3</h3>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+    <div class="grid-25 mobile-50">
+      <h3>Grid 3</h3>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+    <div class="grid-25 mobile-50">
+      <h3>Grid 3</h3>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+    <div class="grid-25 mobile-50">
+      <h3>Grid 3</h3>
+      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
     </div>
     <!-- container -->
     <div class="clear"></div>
