Added id to all navigation for mobile menu conversion

--- a/buttons.html
+++ b/buttons.html
@@ -32,7 +32,7 @@
 <header>
 	<section class="container">
 		<article class="grid-100">
-			<nav>
+			<nav id="main">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="get-started.html">Get Started</a></li>
