--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
 		<div class="container">
 			<article class="grid-50 center-grid">
 				<h1>Centurion</h1>
-				<h2>A streamlined and powerful web framework for responsive web sites.</h2>
+				
+				<h2 class="hide-mobile">A streamlined and powerful web framework for responsive web sites.</h2>
+				<h2 class="hide-desktop">A responsive web framework for your mobile device.</h2>
 
 				<p id="download">
-				  <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust hide-mobile">Download</a>
-				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-desktop">Fork the Repo</a>
+				  <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust hide-mobile" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Desktop Download', 'Centurion Framework Download']);">Download</a>
+				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-desktop" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Mobile', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
 				  </p>
 			</article>
 
