Added a fork repo button for desktop

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
 				<p id="download">
 				  <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust hide-mobile" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Desktop Download', 'Centurion Framework Download']);">Download</a>
+				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-mobile" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Dekstop', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
+				  <!-- mobile button -->
 				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-desktop" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Mobile', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
 				  </p>
 			</article>
