updates to the download and fork repo buttons on the main pay

--- a/index.html
+++ b/index.html
@@ -55,18 +55,26 @@
 	
 	<section id="tour">
 		<div class="container">
-			<article class="grid-50 center-grid">
+			<article class="grid-55 center-grid">
 				<h1>Centurion</h1>
 				
 				<h2 class="hide-mobile">A streamlined and powerful web framework for responsive web sites.</h2>
 				<h2 class="hide-desktop">A responsive web framework for your mobile device.</h2>
-
-				<p id="download">
-				  <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust hide-mobile" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Desktop Download', 'Centurion Framework Download']);">Download</a>
-				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-mobile" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Dekstop', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
+			</article>
+			<article class="grid-60 center-grid">
+				<div id="download" class="hide-mobile">
+				  <div class="grid-50">
+				    <a href="https://github.com/jhough10/Centurion/archive/master.zip" class="button large rust" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Desktop Download', 'Centurion Framework Download']);">Download</a>
+				  </div>
+				  <div class="grid-50">
+				    <a href="https://github.com/jhough10/Centurion/" class="button large light-blue" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Dekstop', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
+				  </div>
+				</div>  
+				  
+				<div id="download" class="hide-desktop">
 				  <!-- mobile button -->
-				  <a href="https://github.com/jhough10/Centurion/" class="button large rust hide-desktop" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Mobile', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
-				  </p>
+				  <a href="https://github.com/jhough10/Centurion/" class="button large rust" onClick="_gaq.push(['_trackEvent', 'Fork Repo', 'Mobile', 'Centurion Framework Fork Repo']);">Fork the Repo</a>
+				  </div>
 			</article>
 
 		</div>
